force-app/main/default/objects/Activity/fields/Assigned_to_Dealer__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_Dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned to Dealer</label>
    <referenceTo>DealerMaster__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>