force-app/main/default/objects/Activity/fields/Assigned_to_Dealer_Account__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_Dealer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned to Dealer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Dealer_Master</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>TS Appointment</relationshipLabel>
    <relationshipName>TS_Appointment</relationshipName>
    <type>Lookup</type>
</CustomField>