force-app/main/default/objects/Activity/fields/Assigned_to_Dealer_Name__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_Dealer_Name__c</fullName>
    <label>Assigned to Dealer Name</label>
    <type>TextArea</type>
</CustomField>