force-app/main/default/objects/Activity/fields/Distance_to_Account__c.field-meta.xml
<CustomField>
    <fullName>Distance_to_Account__c</fullName>
    <label>Distance to Account</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>