force-app/main/default/objects/Activity/fields/OJ_No__c.field-meta.xml
<CustomField>
    <fullName>OJ_No__c</fullName>
    <label>OJ No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>