force-app/main/default/objects/Activity/fields/Phone_Suggestion__c.field-meta.xml
<CustomField>
    <fullName>Phone_Suggestion__c</fullName>
    <label>Phone Suggestion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>