force-app/main/default/objects/Activity/fields/Progress__c.field-meta.xml
<CustomField>
    <fullName>Progress__c</fullName>
    <label>Progress</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ดำเนินการ</fullName>
            </value>
            <value>
                <fullName>ปิดงาน</fullName>
            </value>
            <value>
                <fullName>ยกเลิกการบริการ</fullName>
            </value>
            <value>
                <fullName>รออะไหล่</fullName>
            </value>
            <value>
                <fullName>รออนุมัติแผน</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>