force-app/main/default/objects/Activity/fields/Response_person__c.field-meta.xml
<CustomField>
    <fullName>Response_person__c</fullName>
    <label>Response person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>