force-app/main/default/objects/Activity/fields/Service_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Date__c</fullName>
    <label>Service Date</label>
    <type>DateTime</type>
</CustomField>