force-app/main/default/objects/Activity/fields/SF_Auto_No__c.field-meta.xml
<CustomField>
    <fullName>SF_Auto_No__c</fullName>
    <displayFormat>TSF-{DD}{MM}{YY}-{00000}</displayFormat>
    <label>SF Auto No.</label>
    <type>AutoNumber</type>
</CustomField>