force-app/main/default/objects/Activity/fields/Task_Status__c.field-meta.xml
<CustomField>
    <fullName>Task_Status__c</fullName>
    <label>Task Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>รับงาน</fullName>
                <default>true</default>
                <label>รับงาน</label>
            </value>
            <value>
                <fullName>ไม่รับงาน</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>